--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular": "~1.3.15",
     "uikit": "~2.20.3",
     "underscore": "~1.8.3",
-    "moment": "~2.10.2"
+    "moment": "~2.10.2",
+    "angular-route": "~1.3.15"
   }
 }
