update nw-base to module based

--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nw-base",
+  "name": "nwBase",
   "version": "0.2.0",
   "main": "app.html",
   "author": "Anthony S. Wu <anthonyspwu@gmail.com>",
