--- a/src/bower.json
+++ b/src/bower.json
@@ -15,9 +15,10 @@
   ],
   "dependencies": {
     "angular": "~1.3.15",
-    "uikit": "~2.20.3",
     "underscore": "~1.8.3",
     "moment": "~2.10.2",
-    "angular-route": "~1.3.15"
+    "angular-route": "~1.3.15",
+    "fontawesome": "~4.3.0",
+    "kendo-ui": "~2015.1.521"
   }
 }
