--- a/src/bower.json
+++ b/src/bower.json
@@ -19,6 +19,7 @@
     "moment": "~2.10.2",
     "angular-route": "~1.3.15",
     "fontawesome": "~4.3.0",
-    "kendo-ui": "~2015.1.521"
+    "kendo-ui": "~2015.1.521",
+    "jquery": "~2.1.4"
   }
 }
